--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,8 +22,8 @@ jobs:
     - name: Check out code into the Go module directory
       uses: actions/checkout@v2
 
-    - name: Get staticcheck
-      run: go get honnef.co/go/tools/cmd/staticcheck
+    # - name: Get staticcheck
+    #   run: go get honnef.co/go/tools/cmd/staticcheck
 
     - name: Test
       run: go test -v .
